@@ -10,7 +10,7 @@ License: GNU General Public License v2
 License URI: http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 */
 
-/* Last revised October 9, 2011 v1.4 */
+/* Last revised October 11, 2011 v1.4 */
 
 /*  Copyright 2009-2011  Edward Caissie  (email : edward.caissie@gmail.com)
 
@@ -357,7 +357,8 @@ ul.nav-menu li:hover > ul {
 
 ul.nav-menu ul.sub-menu li,
 ul.nav-menu ul.children li {
-  list-style: none;
+    border: none;
+    list-style: none;
 }
 /* End: Horizontal CSS Drop-Down Menu Module */
 
@@ -564,6 +565,18 @@ a img.aligncenter, a img.center {}
 	padding: 5px;
 	font-size: 105%;
 }
+
+/* Gallery columns up to three (3) are handled by default in the theme.
+ * Four (4) or more columns requires a maximum width be set for the image
+ * thumbnail; also note the height is set to 'auto' to maintain a square shape.
+ **/
+.gallery-columns-4 img { height: auto; max-width: 139px; }
+.gallery-columns-5 img { height: auto; max-width: 110px; }
+.gallery-columns-6 img { height: auto; max-width: 89px; }
+.gallery-columns-7 img { height: auto; max-width: 77px; }
+.gallery-columns-8 img { height: auto; max-width: 66px; }
+.gallery-columns-9 img { height: auto; max-width: 59px; }
+.gallery-columns-10 img { height: auto; max-width: 55px; }
 
 /*=- End Images -=*/
 
